CodeSmellsRemove